This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

30-Apr-2002 (Lars Duening)  (3.3.450)
  - (ed.c) Only consecutive 'z'/'Z' commands do not re-print the current line;
       a 'z'/'Z' after a different command does (suggested by Elric).
  - (comm) When using PThreads, destructing an interactive object now
       flushes all remaining pending data to the socket (suggested by Urv).
       Additionally, the main thread waits properly for the writer thread to
       terminate.
  - (comm.c) When not using MCCP but PThreads, all outputs were doubled.

29-Apr-2002 (Lars Duening)  (3.3.449)
  - (sprintf.c) When printing arrays with '%O', the size was given
       one too small.
  - (mregex.c) PCRE: The string arguments passed to pcre_exec() were wrong, 
       making repeated replacements within on string dangerous (e.g. in ed
       '749,$s!arg!strength!gp') (reported by Elric).

24-Apr-2002 (Lars Duening)  (3.3.448)
  - (interpret.c) If during a call of the type 'funcall(lfun-closure)' the
       object holding the closure was destructed and the closure deallocated,
       int_call_lambda() still read the now-invalid lambda structure after
       the actual call. This could lead to an inconsistency in the
       control stack, depending on the memory contents (reported by Bardioc).

22-Apr-2002 (Lars Duening)  (3.3.447)
  - (pkg-mccp, comm, gcollect.c, configure) Added MCCP support (thanks,
       Dafire!) (p-011012, p-020810-1).

21-Apr-2002 (Lars Duening)  (3.3.446)
  - (pkg-pgsql.c) Corrected a crasher during a GC.
  - (smalloc.c) Corrected the small-free-block statistics.

19-Apr-2002 (Lars Duening)  (3.3.445)
  - (pkg-pgsql, configure, other files) Added PostgreSQL implementation
       based on the code donated by Ctx (thanks!) (f-011229-0).

13-Apr-2002 (Lars Duening)  (3.3.444)
  - (smalloc.c) Removed compilation warnings.

13-Apr-2002 (Lars Duening)  (3.3.443)