@@ -20,7 +20,10 @@
 ;;
 ;;--------------------------------------------------------------------------
 ;;
-;; TODO:  sockets (p-020912, p-021021, f-000814-1, see also Genesis)
+;; TODO:  sockets (p-020912, p-021021, f-000814-1, f-981226-1, f-991104-0)
+;; TODO: Keyword 'publish' (?) to catch(), to force call of runtime_error()
+;; TODO:: even though the error is caught. Also implement in 3.2.10; and
+;; TODO:: make the 'nolog' feature there official as well.
 ;; TODO: Fast callouts
 ;; TODO: Configurable heartbeat interval a la MudOS
 ;; TODO: Closure-Callbacks  (like in call_out()s) should throw an error
@@ -58,15 +61,13 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 450)
-(Parent-Version lpmud 3-3 449)
-(Version-Log "Only consecutive 'z'/'Z' commands in the ed do not reprint the current line.
-Destructing an interactive object when using pthreads now properly flushes all
-remaining data to the socket.
-Small corrections to the pthreads code.")
+(Project-Version lpmud 3-3 451)
+(Parent-Version lpmud 3-3 450)
+(Version-Log "Corrected the waiting for the completion of a comm thread.
+restore_xxx() can now handle CRLF line endings.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 30 Apr 2003 13:17:47 -0600")
+(Checkin-Time "Sat, 03 May 2003 02:10:33 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -103,7 +104,7 @@ Small corrections to the pthreads code.")
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.10 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.65 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.513 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.514 644))
   (HISTORY (lpmud/f/49_HISTORY 1.321 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.19 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -171,7 +172,7 @@ Small corrections to the pthreads code.")
   (src/call_out.c (lpmud/d/5_call_out.c 1.34.1.26 644))
   (src/closure.h (lpmud/f/44_closure.h 1.7.1.17 644))
   (src/closure.c (lpmud/d/4_closure.c 1.41.1.47.1.15 644))
-  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.54 644))
+  (src/comm.c (lpmud/d/2_comm1.c 1.69.1.48.1.55 644))
   (src/comm.h (lpmud/d/3_comm.h 1.26.1.33 644))
   (src/driver.h (lpmud/f/36_driver.h 1.15.1.25 644))
   (src/dumpstat.h (lpmud/f/35_dumpstat.h 1.8 644))
@@ -210,7 +211,7 @@ Small corrections to the pthreads code.")
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
   (src/my-rusage.h (lpmud/f/28_my-rusage. 1.7 644))
   (src/object.h (lpmud/44_object.h 1.34.1.19.1.4 644))
-  (src/object.c (lpmud/45_object.c 1.62.1.88.1.29 644))
+  (src/object.c (lpmud/45_object.c 1.62.1.88.1.30 644))
   (src/otable.h (lpmud/f/27_otable.h 1.8.1.4 644))
   (src/otable.c (lpmud/43_otable.c 1.22.1.6 644))
   (src/parser.c (lpmud/l/13_parser.c 1.1 644))
@@ -261,7 +262,7 @@ Small corrections to the pthreads code.")
   (src/pkg-alists.c (lpmud/l/38_pkg-alists 1.8 644))
   (src/pkg-alists.h (lpmud/l/39_pkg-alists 1.3 644))
   (src/pkg-mccp.h (lpmud/d/b/48_pkg-mccp.h 1.1 644))
-  (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.1 644))
+  (src/pkg-mccp.c (lpmud/d/b/49_pkg-mccp.c 1.2 644))
   (src/pkg-mysql.c (lpmud/j/1_pkg-mysql. 1.19 644))
   (src/pkg-mysql.h (lpmud/j/2_pkg-mysql. 1.3 644))
   (src/pkg-pcre.h (lpmud/a/b/7_pkg-pcre.h 1.1 644))
@@ -282,7 +283,7 @@ Small corrections to the pthreads code.")
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
   (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.3 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.31 644))
-  (src/simulate.c (lpmud/31_simulate.c 1.88.1.108 644))
+  (src/simulate.c (lpmud/31_simulate.c 1.88.1.109 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
   (src/smalloc.c (lpmud/30_smalloc.c 1.31.1.80 644))
   (src/structs.h (lpmud/d/b/5_structs.h 1.4 644))
@@ -678,7 +679,7 @@ Small corrections to the pthreads code.")
   (src/bugs/f-000616 (lpmud/h/21_f-000616 1.1 644) :no-keywords)
   (src/bugs/f-000627 (lpmud/h/22_f-000627 1.2 644) :no-keywords)
   (src/bugs/f-000814 (lpmud/i/43_f-000814 1.1 644) :no-keywords)
-  (src/bugs/f-000814-1 (lpmud/i/44_f-000814-1 1.1 644) :no-keywords)
+  (src/bugs/f-000814-1 (lpmud/i/44_f-000814-1 1.2 644) :no-keywords)
   (src/bugs/f-000830 (lpmud/j/8_f-000830 1.2 644) :no-keywords)
   (src/bugs/f-000905-0 (lpmud/k/38_f-000905-0 1.1 644) :no-keywords)
   (src/bugs/f-000905-1 (lpmud/j/12_f-000905-1 1.2 644) :no-keywords)
