@@ -326,6 +326,7 @@ f_end_mccp_compress (svalue_t * sp)
     
 #ifdef USE_PTHREADS
     ip->compressing = 0; /* Signal the writer to stop compressing */
+    retval = 0;
 #else
     retval = end_compress(ip);
 #endif
